# SmartHomeServer

./: .gitignore  Cargo.toml  README.md
smart_home_client/: Cargo.toml
smart_home_client/examples/: async_tcp_server.rs  async_udp_server.rs  client.rs  tcp_client.rs  udp_client.rs
smart_home_client/src/: errors.rs  lib.rs  tcp_client.rs  udp_client.rs
smart_home_client/src/async_client/: mod.rs  tcp_client.rs  udp_client.rs
smart_home_server/: Cargo.toml
smart_home_server/examples/: async_tcp_server.rs  async_udp_server.rs  server.rs  tcp_server.rs  udp_server.rs
smart_home_server/src/: errors.rs  handlers.rs  lib.rs
smart_home_socket/: Cargo.toml
smart_home_socket/src/: errors.rs  lib.rs  room.rs  socket.rs  thermometer.rs
smart_home_socket_c/: Cargo.toml
smart_home_socket_c/src/: lib.rs  main.rs
