[package]
name = "smart_home_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
dashmap = "4.0.2"
rand = "0.8.5"
thiserror = "1.0.30"
smart_home_socket = { path = "../smart_home_socket" }
